<resources>
    <string name="app_name">Movie Guide</string>
    <string name="title">THE MOVIE GUIDE</string>
    <string name="pref_sort_popular">popular</string>
    <string name="pref_sort_top_rated">top_rated</string>
    <string name="pref_sort_upcoming">upcoming</string>
    <string name="pref_sort_now_playing">now_playing</string>
    <string name="pref_sort_favorite">favorite</string>
    <string name="pref_sort_Popular">Popular</string>
    <string name="pref_sort_Top_rated">Top Rated</string>
    <string name="pref_sort_Upcoming">Upcoming</string>
    <string name="pref_sort_Now_playing">Playing</string>
    <string name="pref_sort_Favorite">Favorites</string>
    <string name="pref_sort_key">Sortorder</string>
    <string name="pref_sort_title">Sort Order</string>
    <string name="pref_sort_default">@string/pref_sort_popular</string>
    <string-array name="pref_sort_entries">
        <item>@string/pref_sort_Popular</item>
        <item>@string/pref_sort_Top_rated</item>
        <item>@string/pref_sort_Upcoming</item>
        <item>@string/pref_sort_Now_playing</item>
        <item>@string/pref_sort_Favorite</item>
    </string-array>
    <string-array name="pref_sort_entryValues">
        <item>@string/pref_sort_popular</item>
        <item>@string/pref_sort_top_rated</item>
        <item>@string/pref_sort_upcoming</item>
        <item>@string/pref_sort_now_playing</item>
        <item>@string/pref_sort_favorite</item>
    </string-array>

    <string name="pref_favorite_key">favorite</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_no_favorites">No Favorites in your list</string>
    <string name="favorite_added">Added to favorite</string>
    <string name="removed_favorite">Removed from favorite</string>
    <string name="drawer_open">Open Navigation drawer</string>
    <string name="drawer_close">Close Navigation drawer</string>
</resources>
